--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     background: #1e1f24;
-    color: #333;
+    color: rgb(235, 221,  221);
     text-align: center;
     font-family: Arial;
     font-size: 16px;
